<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications"
        app:actionLayout="@layout/action_view_switch" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/about" />
    <item
        android:id="@+id/nav_developer"
        android:icon="@drawable/ic_developer_mode_black_24dp"
        android:title="@string/developer" />
    <item android:title="@string/update">
        <menu>
            <item
                android:id="@+id/nav_check_update"
                android:icon="@drawable/ic_system_update_black_24dp"
                android:title="@string/check_update" />
            <item
                android:id="@+id/nav_auto_update"
                android:icon="@drawable/ic_cached_black_24dp"
                android:title="@string/auto_update"
                app:actionLayout="@layout/update_switch" />
        </menu>
    </item>
</menu>
