<!--
  ~ Copyright (c) 2015.
  ~
  ~ Dear maintainer:
  ~ When I wrote this, only God and I understood what I was doing
  ~ Now, God only knows
  ~ So, good luck maintaining the code :D
  ~
  ~ Eslam El-Meniawy
  ~ 05-Jun-2015 00:22
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="elmeniawy.eslam.yts.activities.DetailsActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColorDark">
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/adView">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/drawer_image_padding">
                <CheckedTextView
                    android:id="@+id/movie_tittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/LargeText" />
                <ImageView
                    android:id="@+id/movie_medium_image"
                    android:layout_width="230dp"
                    android:layout_height="345dp"
                    android:src="@drawable/logo"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin" />
                <CheckedTextView
                    android:id="@+id/movie_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MediumText" />
                <CheckedTextView
                    android:id="@+id/movie_genres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/normalText" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin">
                    <com.andexert.library.RippleView
                        android:id="@+id/movie_imdb_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:rv_color="@color/accentColor"
                        app:rv_rippleDuration="150">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/imdb"/>
                    </com.andexert.library.RippleView>
                    <CheckedTextView
                        android:id="@+id/movie_imdb_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MediumText"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_vertical_margin" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_action_star"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:id="@+id/movie_quality_1_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">
                        <com.andexert.library.RippleView
                            android:id="@+id/movie_quality_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/drawer_image_padding"
                            android:background="@color/darkBackground"
                            android:layout_marginLeft="@dimen/drawer_image_padding"
                            app:rv_color="@color/accentColor"
                            app:rv_rippleDuration="150">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="2dp">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_action_download"
                                android:layout_marginRight="@dimen/drawer_image_padding"/>
                            <CheckedTextView
                                android:id="@+id/movie_quality_1_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/normalText"
                                android:textStyle="bold" />
                        </LinearLayout>
                        </com.andexert.library.RippleView>
                        <CheckedTextView
                            android:id="@+id/movie_quality_1_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/normalText" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/movie_quality_2_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">
                        <com.andexert.library.RippleView
                            android:id="@+id/movie_quality_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/drawer_image_padding"
                            android:background="@color/darkBackground"
                            android:layout_marginLeft="@dimen/drawer_image_padding"
                            app:rv_color="@color/accentColor"
                            app:rv_rippleDuration="150">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginBottom="2dp">
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_action_download"
                                    android:layout_marginRight="@dimen/drawer_image_padding"/>
                                <CheckedTextView
                                    android:id="@+id/movie_quality_2_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/normalText"
                                    android:textStyle="bold" />
                            </LinearLayout>
                        </com.andexert.library.RippleView>
                        <CheckedTextView
                            android:id="@+id/movie_quality_2_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/normalText" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/movie_quality_3_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">
                        <com.andexert.library.RippleView
                            android:id="@+id/movie_quality_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/drawer_image_padding"
                            android:background="@color/darkBackground"
                            android:layout_marginLeft="@dimen/drawer_image_padding"
                            app:rv_color="@color/accentColor"
                            app:rv_rippleDuration="150">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginBottom="2dp">
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_action_download"
                                    android:layout_marginRight="@dimen/drawer_image_padding"/>
                                <CheckedTextView
                                    android:id="@+id/movie_quality_3_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/normalText"
                                    android:textStyle="bold" />
                            </LinearLayout>
                        </com.andexert.library.RippleView>
                        <CheckedTextView
                            android:id="@+id/movie_quality_3_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/normalText" />
                    </LinearLayout>
                </LinearLayout>
                <CheckedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MediumText"
                    android:text="@string/synopsis"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>
                <CheckedTextView
                    android:id="@+id/movie_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/normalText" />
            </LinearLayout>
        </ScrollView>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>
        <CheckedTextView
            android:id="@+id/error_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/normalText"
            android:textStyle="bold"
            android:visibility="gone"
            android:text="@string/get_movie_json_error"/>
    </RelativeLayout>

</LinearLayout>
